# HH_Parser

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/vacancy/: vacancy.py
src/working_with_api/: abstract_parser.py  hh.py
src/working_with_file/: abstract_working_with_file.py  working_to_json.py
test/: conftest.py  test_hh.py  test_vacancy.py
