[tool.poetry]
name = "hh-parser"
version = "0.1.0"
description = ""
authors = ["daniil vazhov <d.vajov2010@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports=true
disallow_untyped_defs=true
warn_return_any=true

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
#    "*/.local/*",
    # omit everything in /usr
#    "/usr/*",
    # omit this single file
    # не тестируем абстрактные классы и работу с пользователем
    "src/working_with_api/abstract_parser.py",
    "src/working_with_file/abstract_working_with_file.py",

    "main.py"
    ]